--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,8 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
+        Vue-kit: http://vue-kit.gismall.com/#!/dashboard
+        Vue-kit mobile: http://vue-kit.gismall.com/mobile.html#!/index
         Hexo: http://hexo.io
         ATUI: http://atui.alibaba.net
+
